...
        children: [
          SizedBox(height: 12),
          SeparatedWidget(
            widget: TextFormField(
              controller: _searchPhraseController,
              decoration: InputDecoration(
                labelText: 'Szukaj',
                prefixIcon: const Icon(Icons.search, color: Colors.white38),
                filled: true,
                fillColor: Colors.grey[800],
              ),
              style: const TextStyle(color: Colors.white54),
              autovalidateMode: AutovalidateMode.onUserInteraction,
...
            widget: Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                Expanded(
                  child: TextFormField(
                    controller: _minPriceController,
                    decoration: InputDecoration(labelText: 'Min. cena'),
                    style: const TextStyle(color: Colors.white54),
                    autovalidateMode: AutovalidateMode.onUserInteraction,
                    validator: (value) {
                      if (value != null &&
                          value.trim().isNotEmpty &&
                          num.tryParse(value) == null) {
...
                  ),
                ),
                SizedBox(width: 40),
                Expanded(
                  child: TextFormField(
                    controller: _maxPriceController,
                    decoration: InputDecoration(labelText: 'Max. cena'),
                    style: const TextStyle(color: Colors.white54),
                    autovalidateMode: AutovalidateMode.onUserInteraction,
                    validator: (value) {
                      if (value != null &&
                          value.trim().isNotEmpty &&
                          num.tryParse(value) == null) {
...
            ),
          ...generateAllPropertiesControls(),
          Center(
            child: SizedBox(
              width: 120,
              child: ElevatedButton(
                key: const Key('searchSubmitButton'),
                onPressed: () async {
                  if (!_formKey.currentState!.validate()) {
                    return;
                  }

                  try {
...
